@@ -21,6 +21,7 @@ ver 0.16 (20??/??/??)
   - added tags "ArtistSort", "AlbumArtistSort"
   - id3: revised "performer" tag support
   - ape: MusicBrainz tags
+  - ape: support multiple values
 * decoders:
   - don't try a plugin twice (MIME type & suffix)
   - don't fall back to "mad" unless no plugin matches
